--- a/css/about.css
+++ b/css/about.css
@@ -221,7 +221,29 @@ div#small-dialog1 iframe {
   display: block;
   border-radius: 10px;
 }
-
+.company .card_content{
+  display: grid;
+  padding: 50px 35px;
+  border-radius: 8px;
+  position: relative;
+  z-index: 1;
+  background-color: #f8f9fa;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  grid-auto-flow: column;
+  gap: 20px;
+}
+.company .card_content i{
+  /* display: inline-block !important; */
+  font-size: 38px;
+  width: 40px;
+  color: #009f4d;
+}
+.company .card_content p{
+  font-size: 17px;
+  line-height: 27px;
+  color: #666;
+  opacity: 0.8;
+}
 /*-- container --*/
 .container {
   width: 100%;
