fix res, business

--- a/css/about.css
+++ b/css/about.css
@@ -178,7 +178,7 @@ header {
   line-height: 24px;
   /* text-align: left; */
 }
-.company .company_content{
+.company .company_content {
   align-self: center;
 }
 .company .item_content h3 {
@@ -221,7 +221,7 @@ div#small-dialog1 iframe {
   display: block;
   border-radius: 10px;
 }
-.company .card_content{
+.company .card_content {
   display: grid;
   padding: 50px 35px;
   border-radius: 8px;
@@ -232,13 +232,13 @@ div#small-dialog1 iframe {
   grid-auto-flow: column;
   gap: 20px;
 }
-.company .card_content i{
+.company .card_content i {
   /* display: inline-block !important; */
   font-size: 38px;
   width: 40px;
   color: #009f4d;
 }
-.company .card_content p{
+.company .card_content p {
   font-size: 17px;
   line-height: 27px;
   color: #666;
@@ -246,46 +246,85 @@ div#small-dialog1 iframe {
 }
 
 /* WEB */
-.web{
+.web {
   background-color: #f8f9fa;
 }
-.web .item_bg{
+.web .item_bg {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 50px;
 }
-.web .web_item span{
+.web .web_item span {
   color: #009f4d;
   font-size: 35px;
   margin-bottom: 15px;
   display: inline-block;
 }
-.web .web_item h4{
+.web .web_item h4 {
   font-size: 22px;
   line-height: 28px;
   color: #3f3a64;
   font-weight: 600;
 }
-.web .web_item p{
+.web .web_item p {
   font-size: 17px;
   color: #666;
   line-height: 27px;
   opacity: 0.8;
 }
-.web .img img{
+.web .img img {
   border-radius: 8px;
 }
-/*-- container --*/
-.container {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+/* Business */
+.business{
+  background-image: url(./../img/bg1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  z-index: 1;
+  display: grid;
+  align-items: center;
 }
-@media(max-width: 576px){
-  .web .img img{
-    width: 100%;
+.business::before{
+  content: "";
+  background-color: rgba(29, 42, 55, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+}
+.business .item_text{
+  max-width: 700px;
+}
+.business .title h2{
+  color: white;
+}
+.business .item_text p{
+  color: white;
+}
+.business .video-play-icon{
+  display: inline-block;
+  width: 70px;
+  height: 70px;
+  font-size: 22px;
+  padding-left: 5px;
+  text-align: center;
+  line-height: 65px;
+  border-radius: 50%;
+  transition: 0.3s ease-in-out;
+  /* animation: ripple 1s linear infinite; */
+  color: white;
+  border: 3px solid white;
+}
+
+/* ---------Responsive ------------*/
+@media (max-width: 1200px) {
+  .company .company_img .bg-shape {
+    width: 450px;
+    height: 450px;
   }
 }
 @media (min-width: 992px) {
@@ -295,10 +334,103 @@ div#small-dialog1 iframe {
     margin-left: auto;
   }
 }
+@media (max-width: 1080px) {
+  .title h2 {
+    font-size: 32px;
+    line-height: 40px;
+  }
+  .web .item_bg {
+    gap: 40px;
+  }
+}
+@media (max-width: 992px) {
+  .banner .banner_content h2 {
+    font-size: 40px;
+  }
+  .web .item_bg {
+    gap: 30px;
+  }
+}
+@media (max-width: 760px){
+  .business .business_content{
+    padding: 0 15px;
+  }
+}
+@media (max-width: 576px) {
+  .banner .banner_content h2 {
+    font-size: 35px;
+  }
+  .banner .banner_content p {
+    font-size: 18px;
+  }
+  .title h2 {
+    font-size: 30px;
+    line-height: 38px;
+  }
+  .web .img img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  .company .company_img .bg-shape {
+    width: 440px;
+    height: 440px;
+  }
+  .company .company_img .company_info {
+    padding: 30px;
+    min-width: 150px;
+    min-height: 150px;
+  }
+  .web .item_bg {
+    grid-template-columns: 1fr;
+}
+}
+
+@media (max-width: 415px) {
+  .company .company_img .bg-shape {
+    width: 380px;
+    height: 380px;
+  }
+  .company .company_img .company_info {
+    padding: 20px;
+    min-width: 100px;
+    min-height: 100px;
+    /* right: 45px; */
+  }
+  .title h2 {
+    font-size: 26px;
+    line-height: 32px;
+  }
+}
+@media (max-width: 384px) {
+  .banner .banner_content h2 {
+    font-size: 30px;
+  }
+  .company .company_img .bg-shape {
+    width: 350px;
+    height: 350px;
+  }
+  .title h2 {
+    font-size: 24px;
+    line-height: 30px;
+  }
+}
+
+
+
+/*-- container --*/
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1140px;
+    max-width: 1140px !important;
     margin-right: auto;
     margin-left: auto;
   }
@@ -306,6 +438,6 @@ div#small-dialog1 iframe {
 
 @media (min-width: 1280px) {
   .container {
-    max-width: 1200px;
+    max-width: 1200px !important;
   }
 }
