--- a/css/service.css
+++ b/css/service.css
@@ -198,6 +198,125 @@ header {
     opacity: .8;
 }
 
+/* Register */
+.register{
+    background-image: url(./../img/bg1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* background-position: bottom; */
+    position: relative;
+    z-index: 0;
+}
+.register::before{
+    content: "";
+    background-color: rgba(29, 42, 55, 0.7);
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    min-height: 100%;
+}
+.register .register_text .title p{
+    color: white;
+}
+.register .register_item{
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 30px;
+    padding: 30px 0;
+    border-bottom: 1px solid white;
+    align-items: center;
+}
+.register .register_item:nth-of-type(3){
+    border-bottom: none;
+}
+.register .register_item .register_icon i{
+    font-size: 40px;
+}
+.register .register_item .register_content h5{
+    font-size: 20px;
+    font-weight: 700;
+    margin: 0;
+}
+.register .register_item .register_content p{
+    font-size: 18px;
+    color: #eee;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+.register .register_input .input_bg{
+    padding: 60px;
+    border-radius: 8px;
+    background-color: white;
+}
+.register .register_input .input_bg h3{
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 34px;
+}
+.register .register_input .input_bg p{
+    font-size: 17px;
+    line-height: 27px;
+    color: #666;
+    opacity: .8;
+}
+
+.register .register_input .form_group input, .register .register_input .form_group textarea{
+    margin-bottom: 20px;
+    padding: 12px 25px;
+    border: none;
+    background-color: #f7f7f7;
+    color: #666;
+    height: 60px;
+    width: 100%;
+    font-size: 17px;
+    outline: none;
+}
+.register .register_input .form_group textarea{
+    min-height: 100px;
+}
+
+/* Solutions */
+.solution{
+    background-color: #f7f7f7;
+}
+.solution .solution_item_content .item_content{
+    text-align: center;
+    padding: 40px 30px;
+    border-radius: 8px;
+    background-color: white;
+    transition: all .3s ease;
+}
+.solution .solution_item_content .item_content:hover{
+    transform: translateY(-4px);
+    box-shadow: rgba(46, 41, 51, 0.08) 0px 2px 4px, rgba(71, 63, 79, 0.16) 0px 5px 10px;
+}
+.solution .solution_item_content .icon img{
+    max-width: 65px;
+    display: block;
+    margin: 0 auto;
+}
+.solution .solution_item_content h3{
+    font-size: 22px;
+    line-height: 28px;
+    color: #3f3a64;
+    font-weight: 600;
+    margin-top: 25px;
+    transition: all .3s ease-in-out;
+}
+.solution .solution_item_content h3:hover{
+    color: #009f4d;
+    cursor: pointer;
+}
+.solution .solution_item_content p{
+    font-size: 17px;
+    line-height: 27px;
+    color: #666;
+    opacity: .8;
+    margin-bottom: 0;
+}
 
 
 
@@ -219,6 +338,9 @@ header {
   .industries .item_box i{
     font-size: 30px;
   }
+  .register .register_input .input_bg{
+    padding: 50px;
+  }
 }
 @media (max-width: 992px) {
   .banner .banner_content h2 {
@@ -233,6 +355,21 @@ header {
   .industries .item_box{
     padding: 40px 30px;
   }
+  .register .register_input .input_bg h3{
+    font-size: 24px;
+    line-height: 30px;
+  }
+  .solution .solution_item_content .item_content{
+    padding: 1.5rem;
+  }
+}
+@media (max-width: 667px){
+    .solution .solution_item_content h3{
+        font-size: 18px;
+    }
+    .solution .solution_item_content p{
+        margin: 14px 0 26px;
+    }
 }
 @media (max-width: 576px) {
   .banner .banner_content h2 {
@@ -248,11 +385,24 @@ header {
   .check .check_item_text p {
     margin: 0;
   }
+  .register .register_input a.btn.btn-success{
+    width: 100% !important;
+    display: block;
+  }
+  .solution .solution_item_content p{
+    margin: 0 0 10px 0;
+  }
 }
 
 @media (max-width: 480px) {
   .check .check_item_container {
     padding: 35px 20px;
+  }
+  .register .register_item{
+    padding: 25px 0;
+  }
+  .register .register_item .register_icon i{
+    font-size: 30px;
   }
 }
 
@@ -274,6 +424,16 @@ header {
     font-size: 20px;
     margin-bottom: 10px;
   }
+  .register .register_input .input_bg{
+    padding: 40px 30px;
+  }
+  .register .register_input .input_bg h3{
+    font-size: 22px;
+    line-height: 30px;
+  }
+  .solution .solution_item_content .item_content{
+    padding: 1.5rem 1em;
+  }
 }
 @media (max-width: 384px) {
   .banner .banner_content h2 {
@@ -285,6 +445,13 @@ header {
   }
   .button .btn-style {
     font-size: 16px;
+  }
+  .register .register_item{
+    padding: 20px 0;
+    gap: 20px;
+  }
+  .register .register_item .register_content h5{
+    font-size: 18px;
   }
 }
 
